                         PHPCheckstyle Release Notes
                         ===========================
Version 0.13.1
--------------
* Issue 71:	False positive : close()
* Issue 73:	False positive : delete()
* Issue 74: Allow multiple src directories/files in the command line.
            
Version 0.13.0
--------------
* Issue 70: Simplification of the "strictCompare" rule. When active this rule will be checked everywhere. 
            This may generate lots of warnings. 

Version 0.12.5
--------------
* Issue 69: PHP tag should be at the beginning of the line

Version 0.12.4
--------------
* Issue 59: Enhancement: Add allowed exceptions to docBlocks section of configuration
* Issue 63:	Catch parsing exceptions and other PHP errors
* Issue 65: Add composer.json file
* Issue 66: block closure '}' detected in a string


Version 0.12.3
--------------
* Issue 52:	Config for PHP frameworks
* Issue 54:	detect empty files

Version 0.12.2
--------------
* Issue 53:	else/ elseif without curly braces (thanks to Maximilian Pachl)
* Added a check of the curly braces after a "else" statement

Version 0.12.1
--------------
* Issue 50 : --exclude flag is not honoured
* No space expected after '=' when used in assignation by reference

Version 0.12.0
--------------
* New reporter : xml_console (for use with Netbeans plugin : http://sourceforge.net/projects/phpmdnb/), thanks to Jens Radtke
* Issue 47 : False docBlock error when using empty return in a method
* Added the version number in the run.php file

Version 0.11.0
--------------
* Issue 1 : Refactoring of the code
* Issue 43:	False positive for "The function throws an exception"
* Issue 41: False positive : The statement 'while' must contain its code within a {} block.
* Issue 24: Line length checking of non-PHP code should be toggleable in a config option.
* Added Zend Framework style configuration file

Version 0.10.6
--------------
* Issue 40:	Propose replacement for PHP aliases